[package]
name = "msyt"
version = "1.1.0"
authors = ["Kyle Clemens <msyt@kyleclemens.com>"]
description = "Import and export from MSBT files to MSYT (YAML) files."
edition = "2018"

[dependencies]
base64 = "0.21.0"
byteordered = "0.4"
clap = "2"
failure = "0.1"
indexmap = { version = "1", features = ["serde", "serde-1"] }
msbt = { git = "https://github.com/lojewalo/msbt-rs" }
rayon = "1"
serde = "1"
serde_derive = "1"
serde_yaml = "0.9.34+deprecated"
walkdir = "2"
# roead = "1.0.0" # for endian handling
#roead = "0.25.1" # for endian handling
