[package]
name = "msyt"
version = "1.1.0"
authors = ["Kyle Clemens <msyt@kyleclemens.com>"]
description = "Import and export from MSBT files to MSYT (YAML) files."
edition = "2018"

[dependencies]
base64 = "0.21.0"
byteordered = "0.4"
clap = "4.5.34"
failure = "0.1.8"
indexmap = { version = "2.8.0", features = ["serde", "serde-1"] }
msbt = { git = "https://github.com/lojewalo/msbt-rs" }
rayon = "1.10.0"
serde = "1.0.219"
serde_derive = "1.0.219"
serde_yaml = "0.9.34+deprecated"
walkdir = "2.5.0"
# roead = "1.0.0" # for endian handling
#roead = "0.25.1" # for endian handling
